--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pi": "~1.0.0",
     "react": "~0.13.3",
     "teoria": "~1.9.0",
+    "teoria-scale-chords": "~1.0.0",
     "tone": "~0.4.2",
     "webpack": "~1.10.1"
   }
