--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "baobab": "~1.1.2",
     "baobab-react": "~0.1.1",
     "debounce": "~1.0.0",
+    "json-loader": "~0.5.2",
     "node-libs-browser": "~0.5.2",
     "node-uuid": "~1.4.3",
     "pi": "~1.0.0",
+    "pixi-piano-roll": "~0.0.4",
     "react": "~0.13.3",
     "teoria": "~1.9.0",
     "tone": "~0.4.2",
