--- a/package.json
+++ b/package.json
@@ -24,20 +24,28 @@
     "url": "https://github.com/mjhasbach"
   },
   "devDependencies": {
+    "angular": "~1.4.4",
+    "angular-animate": "~1.4.4",
+    "angular-aria": "~1.4.4",
+    "angular-material": "~0.10.1",
     "babel-core": "~5.8.3",
     "babel-loader": "~5.3.2",
     "babel-runtime": "~5.8.3",
-    "baobab": "~1.1.2",
-    "baobab-react": "~0.1.1",
     "debounce": "~1.0.0",
+    "express": "~4.13.3",
+    "jquery": "~2.1.4",
     "json-loader": "~0.5.2",
+    "material-design-icons": "~2.0.0",
     "node-libs-browser": "~0.5.2",
     "node-uuid": "~1.4.3",
     "pi": "~1.0.0",
     "pixi-piano-roll": "~0.0.6",
-    "react": "~0.13.3",
     "teoria": "~1.9.0",
+    "to-capital-case": "~0.1.1",
     "tone": "~0.4.2",
     "webpack": "~1.10.1"
+  },
+  "dependencies": {
+    "roboto-fontface": "~0.4.2"
   }
 }
