--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "angular": "1.4.5",
     "angular-animate": "1.4.5",
     "angular-aria": "1.4.5",
+    "angular-material": "0.10.1",
     "babel-core": "5.8.24",
     "babel-loader": "5.3.2",
     "babel-runtime": "5.8.24",
+    "css-loader": "^0.19.0",
     "debounce": "1.0.0",
-    "express": "4.13.3",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.3.0",
     "jquery": "2.1.4",
     "json-loader": "0.5.3",
     "node-libs-browser": "0.5.3",
@@ -39,15 +42,11 @@
     "pi": "1.0.0",
     "pixi-piano-roll": "1.2.2",
     "release-script": "0.4.0",
+    "style-loader": "0.12.4",
     "teoria": "1.12.0",
     "to-capital-case": "0.1.1",
     "tone": "0.5.1",
     "webpack": "1.12.2"
-  },
-  "dependencies": {
-    "angular-material": "0.10.1",
-    "material-design-icons": "2.0.0",
-    "roboto-fontface": "0.4.2"
   },
   "scripts": {
     "release": "release"
