--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "email": "hasbach.git@gmail.com",
     "url": "https://github.com/mjhasbach"
   },
-  "devDependencies": {
+  "dependencies": {
     "angular": "1.4.5",
     "angular-animate": "1.4.5",
     "angular-aria": "1.4.5",
