--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "babel-core": "5.8.24",
     "babel-loader": "5.3.2",
     "babel-runtime": "5.8.24",
-    "css-loader": "^0.19.0",
+    "css-loader": "0.19.0",
     "debounce": "1.0.0",
-    "file-loader": "^0.8.4",
-    "html-loader": "^0.3.0",
+    "file-loader": "0.8.4",
+    "html-loader": "0.3.0",
     "jquery": "2.1.4",
     "json-loader": "0.5.3",
     "node-libs-browser": "0.5.3",
