--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "calculaural",
+  "private": true,
   "version": "1.1.3",
   "description": "Make randomly / procedurally generated music",
   "license": "MIT",
