--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.3",
   "description": "Make randomly / procedurally generated music",
   "license": "MIT",
-  "homepage": "https://github.com/mjhasbach/calculaural",
+  "homepage": "http://calculaural.hasba.ch",
   "keywords": [
     "music",
     "random",
